Terminate curl test loops when MAX_RETRIES exceeded.

--- a/Dockerfile-HttpTest
+++ b/Dockerfile-HttpTest
@@ -1,6 +1,7 @@
 FROM appropriate/curl
 MAINTAINER Ivan Sim, ihcsim@gmail.com
 
+ENV MAX_RETRIES=50
 COPY test/http.sh /test/http.sh
 WORKDIR /test
 ENTRYPOINT ["/bin/sh"]
